[gd_scene load_steps=12 format=4 uid="uid://b17vxku38en07"]

[ext_resource type="Script" uid="uid://doixsucly5at" path="res://scripts/traincar.gd" id="1_kubgn"]
[ext_resource type="PackedScene" uid="uid://d1vsbmyl6krlc" path="res://scenes/traincar/prototype/scene_traincar_proto.tscn" id="2_nghjo"]
[ext_resource type="PackedScene" uid="uid://bbhjxhjwveilg" path="res://scenes/traincar/prototype/scene_traincar_proto_3.tscn" id="3_nghjo"]
[ext_resource type="Texture2D" uid="uid://82667j736wn4" path="res://models/prototype/mdl_traincar_proto_Grid.png" id="4_nghjo"]
[ext_resource type="PackedScene" uid="uid://d0kjt7kpp8fw4" path="res://scenes/colliders/collider_standard_car.tscn" id="4_u7j5a"]
[ext_resource type="PackedScene" uid="uid://bn5wqjq65fhl5" path="res://scenes/objects/obj_doorway.tscn" id="5_ivih5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ygmmo"]
resource_name = "mat_train_proto"
albedo_texture = ExtResource("4_nghjo")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_w3l17"]
_surfaces = [{
"aabb": AABB(-2.95, 0, -10.375, 5.9, 3.375, 20.75),
"format": 34896613377,
"index_count": 336,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAAADAAQAAwAFAAQAAAAEAAYABQAGAAQAAwAHAAUABwADAAAABQAIAAYACQADAAcACQABAAMACQACAAEACgAAAAYACgAAAAIACAALAAYACgAGAAsADAAIAAUABwAMAAUADQAAAAoABwAAAA0ABwAOAAwADQAOAAcADAAPAAgADgAPAAwAEAAIAA8ADgAQAA8AEAANAAgADQAQAA4ADQARAAgACAARAAsAEgAHAA4AEgAJAAcAEAAPABMADgAQABQADgAUABIACQASABQAFAASABUAEgAWABUAEgAJABYAFwAVABYAFAAVABcACQAYABYACQABABgAGQAWABgAFwAWABkAAQAaABgAGQAYABoAAQACABoACQAUABsACQAbAAIAGwAUABcAGwAXABkAHAAXABQAEAAcABQAHQAbABkAHQACABsAHgAZABoAHQAZAB4AHAAdAB4AAgAfABoAHgAaAB8AHQAgAAIAAgAgAB8ACgACACAAHAAhABcAHAAeACEAIAAiAB8AIwAeAB8AIwAfACIAJAAhAB4AJAAeACMAJQAhACQAJQAcACEAJgAkACMAJgAlACQAJwAjACIAJwAmACMAIAAnACIAJgAcACUAJgAnACAAJgAdABwAJgAgAB0AKAAgACcAKAAKACAAKQAnACYAKQAoACcAKgAmACUAKgApACYAKwAlABwAKwAqACUAEAArABwAKAAKAAsAEAATACsALAAKACgADQAKACwAKAALAC0AKQAoAC0ALAAoACkAEQAtAAsADQAsABEALAATABEALAArABMALAApACoALAAqACsAKQAtAC4AEQAuAC0AKgApAC4AEwAuABEAKwAqAC8AKwAvABMAKgAuAC8AEwAvAC4A"),
"name": "mat_train_proto",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("dF///6AEAAAAAI3jXvsAAHRf//9e+wAAAACN46AEAAAAAI3jAAAAAAAAqqoAAAAAdF///wAAAAAAAKqqoAQAAHRfqqoAAAAAAACqql77AACKoP//oAQAAIqg//8AAAAAAAAAAAAAAAB0X6qqoAQAAAAAAACgBAAAdF8AAAAAAAB0XwAAoAQAAIqgqqoAAAAAAAAAAF77AACKoAAAAAAAAHRfAABe+wAAAAAAAP//AAAAAKqq//8AAHRfAAD//wAAAACN4///AAB0X6qq//8AAHRf/////wAAdF+qql77AACKoAAAXvsAAIqgqqpe+wAAiqCqqv//AACKoP////8AAIqg//9e+wAAiqAAAP//AAD//43j//8AAP//qqr//wAA//8AAP//AAD//wAAXvsAAP//qqpe+wAA//+N4177AAD//43joAQAAP//qqqgBAAA//8AAKAEAACKoAAAoAQAAIqgqqqgBAAA//+N4wAAAAD//6qqAAAAAP//AAAAAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_fjo1h"]
resource_name = "mdl_traincar_proto_Cube"
_surfaces = [{
"aabb": AABB(-2.95, 0, -10.375, 5.9, 3.375, 20.75),
"attribute_data": PackedByteArray("ImgMJ/9///8iaP///38MJ8LpdN/T7QzH0+1038LpDMciiP///38MJyKIDCf/f///iqD//4qgDCciKPsi/z/t+yIo7fv/P/siIij//90X///dF+373Rf7IiIo6h7dF+oeAAD7IgAA7fusqP//iqAMJ6yoDCeKoP//FMH//xTBDCfC6QzH0+2krtPtDMfC6aSuseXc18Lp/7/C6dzXseX/v7Hl///C6SHowun//7HlIejT7TyWwumkrsLpPJbT7aSuseXcd8LpdF/C6dx3seV0X7Hl/3/C6f9//z8MJ9xX////P///3FcMJ9xXDCciaP//3Ff//yJoDCfC6VJXseV0X7HlUlfC6XRfwunqPrHl6j7T7dR9wuk8lsLp1H3T7TyWwulfHrHlxzax5V8ewunHNrHl6j7C6eo+SM0h6CbF//8UwSHoSM3//7HlIeix5f//SM3c1xTB3NdIzf+/JsX/v7Hl/7+x5dzXwun/f7Hl3Jex5f9/wunclxFExxb/Pwwn/z/HFhFEDCfC6SKoseX/v7HlIqjC6f+/wuncl7HlIqix5dyXwukiqNPt9mXC6dR9wun2ZdPt1H3T7RlOwun2ZcLpGU7T7fZlSM0iqCbF/78UwSKoSM3/v7HlIqix5f+/SM3clxTB3JdIzf9/JsX/f7Hl/3+x5dyXseUh6MLp3NfC6SHoseXc18LpGU7T7Tw20+0ZTsLpPDbC6dz30+1039Pt3PfC6XTfwun//9Pt///C6Tw20+1fHtPtPDbC6V8eEUQMJyJIxxYiSAwnEUTHFkjN/z8UwdxXJsX/P7Hl/z+x5dxXSM3cV0jNImgUwSJoSM3/fybF/3+x5SJoseX/f0jN/z8UwSIoSM0iKCbF/z+x5f8/seUiKBTB3RdIzd0XJsUAAEjNAACx5QAAseXdFw=="),
"format": 34896613399,
"index_count": 336,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAAIAAoADAAKAA0ADgAPABAADgARAA8AEAASABMAEAATABQAFQAOABAAFQAQABQAFQAWAA4AFQAXABYAGAAVABQAGAAUABkAGgAbABwAGgAdABsAHgAaABwAHgAcAB8AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAAwADIANAAyADUANgA3ADgANgA5ADcAOgA7ADwAOgA9ADsAPgA/AEAAPgBBAD8AQgA+AEAAQgBAAEMARABFAEYARABHAEUASABJAEoASABLAEkASwBMAEkASwBNAEwATgBPAFAATgBRAE8AUgBRAE4AUgBTAFEAVABOAFAAVABQAFUAVgBUAFUAVgBVAFcAWABUAFYAWABZAFQAWgBbAFwAWgBdAFsAXgBfAGAAXgBhAF8AYgBjAGQAYgBlAGMAZgBnAGgAZgBpAGcAagBrAGwAagBtAGsAbgBvAHAAbgBxAG8AcgBzAHQAcgB1AHMAdgB1AHIAdgB3AHUAeAByAHQAeAB0AHkAegB4AHkAegB5AHsAfAB4AHoAfAB9AHgAfgB/AIAAfgCBAH8AggCDAIQAggCFAIMAhgCHAIgAhgCJAIcAigCGAIgAigCIAIsAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACXAJgAlACYAJkAlACZAJUAmgCVAJkAmgCbAJUAnACbAJoAnACdAJsAnACaAJ4AnACeAJ8AoAChAKIAoACjAKEAogCkAKAAogClAKQAogChAKYAogCmAKcApwCmAKgApwCoAKkApwCpAKoApwCqAKsA"),
"material": SubResource("StandardMaterial3D_ygmmo"),
"name": "mat_train_proto",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 172,
"vertex_data": PackedByteArray("dF///6AEIvsAAI3jXvsi+3Rf//9e+yL7AACN46AEIvt0X6qqXvv//3RfAAD/////dF+qqv////90XwAAXvv//wAAqqpe+1TVAACN46AEVNUAAKqqoARU1QAAjeNe+1TVAAAAAF77VNUAAAAAoARU1YqgAACgBP+///8AAF77/7+KoAAAXvv/v///AACgBP+/iqAAAP///790XwAA////v3RfAABe+/+/dF8AAKAE/7+KoAAAAAD/v3RfAAAAAP+/AAAAAKAE/78AAAAAXvv/v///qqqgBFTV//+N4177VNX//6qqXvtU1f//jeOgBFTV//8AAKAEVNX//wAAXvtU1YqgqqqgBP//iqAAAAAA//+KoKqqAAD//4qgAACgBP//dF///6AEaNkAAI3jAABo2XRf//8AAGjZAACN46AEaNn//43joAR60Yqg//8AAHrR//+N4wAAetGKoP//oAR60YqgAABe+///iqCqqv////+KoAAA/////4qgqqpe+/////+qql77/////wAA////////qqr///////8AAF77/////43jXvv/////jeP///////+N46AEIvuKoP//Xvsi+///jeNe+yL7iqD//6AEIvuKoP//oAT//3Rf//9e+///iqD//177//90X///oAT//wAAqqpe+///AACN4/////8AAKqq/////wAAjeNe+///AAAAAF77//8AAAAA/////3RfAACgBP//dF+qqgAA//90XwAAAAD//3RfqqqgBP////8AAKAE/////6qqAAD/////AAAAAP////+qqqAE/////43jAAD/////jeOgBP//dF+qqv///78AAI3j////v3Rf//////+/AACqqv///790XwAA////vwAAAAD///+/iqCqqv///7+KoP//////v///qqr///+///+N4////7///wAA////v4qgAAD///+/AACN4177aNl0X/////9o2QAAjeP//2jZdF///177aNmKoKqqXvtU1XRfqqr//1TViqCqqv//VNV0X6qqXvtU1Yqg//9e+3rR//+N4///etGKoP////960f//jeNe+3rRdF///177VNWKoP////9U1XRf/////1TViqD//177VNX//wAAXvtU1YqgAAD//1TV//8AAP//VNWKoAAAXvtU1XRfAABe+1TVAAAAAP//VNV0XwAA//9U1QAAAABe+1TViqCqqgAA/////43jAAD//4qg//8AAP////+qqgAA//+KoAAAAAD/////AAAAAP//dF+qqgAA//90X///AAD//wAAqqoAAP//AACN4wAA//8AAAAAAAD//3RfAAAAAP//iqD//6AEVNV0X///AABU1Yqg//8AAFTVdF///6AEVNWKoAAAoARU1f//AAAAAFTViqAAAAAAVNX//wAAoARU1QAAqqqgBP//AAAAAAAA//8AAKqqAAD//wAAAACgBP//AACN46AE//8AAI3jAAD//wAAAACgBFTVdF8AAAAAVNUAAAAAAABU1XRfAACgBFTVdF+qqqAEVNWKoKqqAABU1XRfqqoAAFTViqCqqqAEVNUAAKqqXvv//3Rf//9e+///AACN4177//8AAAAAXvv//3RfAABe+///dF+qql77//+KoKqqXvv//4qg//9e+/////+qql77/////43jXvv//4qgAABe+/////8AAF77//8AAKqqoAT/v3Rf//+gBP+/dF+qqqAE/78AAI3joAT/vwAAAACgBP+/dF8AAKAE/7+KoP//oAT/v4qgqqqgBP+///+N46AE/7///6qqoAT/v///AACgBP+/iqAAAKAE/78xhZhCMYWYQjGFmEIxhZhC/7//f/+//3//v/9//7//f6qqVFWqqlRVqqpUVaqqVFWqqlRVqqpUVf///3////9/////f////3////9/////f////3////9/////f////3////9/////f1RVqqpUVaqqVFWqqlRVqqpUVaqqVFWqqv8//3//P/9//z//f/8//38C2gEtAtoBLQLaAS0C2gEtYNAwKGDQMChg0DAoYNAwKP8//3//P/9//z//f/8//3//v/9//7//f/+//3//v/9//7//f/+//3+Yws36mMLN+pjCzfqYws36/3//P/9//z//f/8//3//P/8//3//P/9//z//f/8//3//P/9//z//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//v/9//7//f/+//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//38C2gEtAtoBLQLaAS0C2gEtVFVUVVRVVFVUVVRVVFVUVWDQMChg0DAoYNAwKGDQMChU1aoqVNWqKlTVqipU1aoqVFVUVVRVVFVUVVRVVFVUVVRVVFVUVVRVVFVUVVRVVFX/P/+//z//v/8//7//P/+//z//v/8//7//P/+//z//v/8//7//P/+//z//v/8//79U1aoqVNWqKlTVqipU1aoqVFVUVVRVVFVUVVRVVFVUVf8//3//P/9//z//f/8//3//P/9//z//f1RVVFVUVVRVVFVUVVRVVFVVVVRVVVVUVVRVVFVVVVRV/7//P/+//z//P/+//z//v/8//7//v/8//7//P/8//7//v/8//z//v/+//z//v/8//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9//3//f/9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_w3l17")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ji8j3"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_j51fj"]
size = Vector3(7, 2, 19)

[node name="SceneTraincarProto" type="Node3D"]
script = ExtResource("1_kubgn")
prefab_enter_traincar = ExtResource("2_nghjo")
prefab_exit_traincar = ExtResource("3_nghjo")

[node name="Environment" type="Node3D" parent="."]

[node name="mdl_traincar_proto" type="Node3D" parent="Environment"]

[node name="Car" type="MeshInstance3D" parent="Environment/mdl_traincar_proto"]
mesh = SubResource("ArrayMesh_fjo1h")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_ji8j3")

[node name="collider_standard_car" parent="Environment" instance=ExtResource("4_u7j5a")]

[node name="door_enter" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -10.25)

[node name="doorway" parent="door_enter" instance=ExtResource("5_ivih5")]

[node name="mdl_door_proto" parent="door_enter/doorway" index="0"]
visible = false

[node name="door_exit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.25)

[node name="doorway" parent="door_exit" instance=ExtResource("5_ivih5")]

[node name="mdl_door_proto" parent="door_exit/doorway" index="0"]
visible = false

[node name="enter_trigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="enter_trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_j51fj")

[editable path="door_enter/doorway"]
[editable path="door_exit/doorway"]
